src/assets/scss/pages/index.scss
@import '../_includes';

//- Mobile-portrait
//- ----------------------------------------------

// Header
header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  & a {
    & .logo {
      padding-left: 0.5em;
      height: 35px;
    }
  }
}

// Navbar
nav {
  & .menu {
    cursor: pointer;
  }

  & ul {
    visibility: hidden;
    opacity: 0;
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    background: #ffffff;
    height: 100vh;
    padding-top: 5em;
    z-index: 100;

    & li a {
      font-size: 1.5em;
      font-weight: bold;
      padding: 1em;
      display: block;
      color: #2b2a35;
    }

    & .nav {
      &__exit a {
        position: absolute;
        top: -5px;
        right: 5px;
        color: #2b2a35;
      }

      &__item--active a {
        color: #7552f6;
      }
    }
  }
}

// Hero
.hero__content {
  width: 65%;
  margin: 0 auto;
  align-items: flex-end;

  & .hero__description {
    margin-bottom: 0.9em;
  }
}

// Sponsors
.hero__sponsors {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: 2em auto;

  & .hero__sponsor-img {
    margin: 0;
  }

  #svg-behance {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-dribbble {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-squarespace {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-shopify {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-paypal {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-adobe {
    fill: #d4d4d4;
    transition: all 0.2s ease-out;
  }

  #svg-behance:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }

  #svg-dribbble:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }

  #svg-squarespace:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }

  #svg-shopify:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }

  #svg-paypal:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }

  #svg-adobe:hover {
    fill: #969a9e;
    transition: all 0.2s ease-out;
  }
}

//TODO Remove .left and fix styling
.left p {
  color: #969a9e;
}

.left h2 {
  padding: 0.9em 0;
}

// Services
.services {
  & .services__content-main {
    width: 75%;
    margin: 0 auto;
  }

  & .services__content-description {
    width: 70%;
    margin: 0 auto;
    padding-bottom: 2em;
  }

  &__subtitle span {
    color: #7552f6;
  }

  // Soft Shadow
  &__card {
    width: 100%;
    margin: 2em auto;
    padding: 2em;
    background: white;
    border-radius: 0.4em;
    text-align: center;
    border-top: #7552f6 6px solid;
    transition: all 0.2s ease-out;
    @include soft-shadow;

    & h3 {
      font-size: 1.3em;
      font-weight: 700;
      padding: 1em 0;
    }

    & p {
      color: #969a9e;
      padding-bottom: 1.8em;
    }
  }

  &__card:hover {
    border-top: #9897ee 6px solid;
    transition: all 0.2s ease-out;
  }

  &__service-img {
    width: 70%;
    margin: 0 auto;
  }
}

// Projects
.projects {
  & .projects__content-main {
    width: 75%;
    margin: 0 auto;
  }

  &__subtitle span {
    color: #7552f6;
  }

  &__work {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    margin-top: 3.5em;

    & .cell {
      flex: 0 0 32%;
      margin: 1em auto;
      background-color: #ffffff;
      box-shadow: horizontal vertical color;
      box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);

      & .projects-img {
        border-radius: 0.4em;
        background-position: center;
        transition: all 0.2s ease-out;
        background-repeat: no-repeat;
        background-size: cover;
        cursor: pointer;
        filter: grayscale(100%);
      }

      & .projects-img:hover {
        filter: grayscale(0%);
      }
    }
  }
}

// Testimonials

.testimonials {
  & .testimonials__content-main {
    width: 75%;
    margin: 0 auto;
  }

  &__qoute {
    color: #7552f6;
    padding-bottom: 0.5em;
  }

  & h2 {
    padding-bottom: 1em;
  }

  &__subtitle span {
    color: #7552f6;
  }

  // Soft Shadow
  &__card {
    width: 100%;
    margin: 3.5em auto;
    background: white;
    border-radius: 0.4em;
    text-align: center;
    border-top: #7552f6 6px solid;
    transition: all 0.2s ease-out;
    @include soft-shadow;

    & span img {
      position: absolute;
      width: 60px !important;
      height: 60px;
      background: white;
      margin-top: -2em;
      border-radius: 50%;
      background: #e6c9ff;
      margin-left: auto;
      margin-right: auto;
      border: #7552f6 4px solid;
      left: 0;
      right: 0;
      display: none;
    }

    & h3 {
      font-size: 1.4em;
      font-weight: 700;
      padding: 2em 0 0.5em;
    }

    & h4 {
      font-weight: 700;
      padding: 0 0 1em;
    }

    & p {
      color: #969a9e;
      padding: 0 1.8em 3em;
    }
  }
}
/* ... */

